--- a/shop/cart.html
+++ b/shop/cart.html
@@ -42,6 +42,10 @@
             
         </div>
 
+        <div class="checkoutContainer">
+            
+        </div>
+
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
     <script src="js/main.js"></script>
 
